--- a/package.json
+++ b/package.json
@@ -1,6 +1,9 @@
 {
     "devDependencies": {
-        "http-server": "14.1.1"
+        "autoprefixer": "^10.4.21",
+        "http-server": "14.1.1",
+        "postcss": "^8.5.3",
+        "tailwindcss": "^4.0.14"
     },
     "scripts": {
         "start": "npx http-server ."
