--- a/package.json
+++ b/package.json
@@ -7,5 +7,8 @@
     },
     "scripts": {
         "start": "npx http-server ."
+    },
+    "dependencies": {
+        "@tailwindcss/cli": "^4.0.14"
     }
 }
