--- a/package.json
+++ b/package.json
@@ -7,5 +7,8 @@
     },
     "scripts": {
         "start": "npx http-server ."
+    },
+    "dependencies": {
+        "@yandex/ymaps3-clusterer": "^0.0.1"
     }
 }
